# ChatPDFOllama

./: pyproject.toml  rag.py  requirements.txt
