[tool.poetry]
name = "chatpdfollama"
version = "0.1.0"
description = "A Streamlit app for chatting with PDFs using Llama and FastEmbed"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.35.0"
streamlit-chat = "^0.1.1"
langchain = "^0.1.0"
langchain-community = "^0.1.0"
chromadb = "^0.1.0"
pypdf = "^0.1.0"
pysqlite3-binary = ">=0.4.6"
fastembed = "^0.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
